demo-http-apps/demo-gw-http-route-multiple-2-3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-http-app-v2-v3
spec:
  parentRefs:
    - name: gw-multiple-listeners
  hostnames:
    - "gw-migration.mydomain.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: svc-v2
          port: 80
          weight: 90
        - name: svc-v3
          port: 80
          weight: 10
